added endpoints: to publish, to get all by video id
