# Keywords.Data.Repositories/Interfaces/IKeywordEntityRepository.cs
@@ -3,4 +3,6 @@ namespace Keywords.Data.Repositories.Interfaces;
 public interface IKeywordEntityRepository: IRepository<KeywordEntity>
 {
     bool ExistsById(Guid id);
+    bool KeywordsVideoExistsById(Guid videoId);
+    (List<KeywordEntity>? keywords, int totalsize) GetAllKeywordsByVideoId(Guid videoId, int size, int page);
 }
