# Keywords.Services/KeywordService.cs
@@ -25,8 +25,38 @@ public class KeywordService: IKeywordService
         return _mapper.Map<Keyword>(keywordEntity);
     }
 
+    public (List<Keyword> keywords, int totalSize) GetAllKeywordsByVideoId(Guid videoId, int size, int page)
+    {
+        var keywordsEntities = _keywordEntityRepository.GetAllKeywordsByVideoId(videoId, size, page);
+
+        var keywords = keywordsEntities.keywords
+            .Select(a => _mapper.Map<Keyword>(a))
+            .ToList();
+
+        return (keywords, keywordsEntities.totalsize);
+    }
+
+    public Keyword? PublishKeyword(Guid id, bool toBePublished)
+    {
+        if(!ExistsById(id))
+            return null;
+        
+        var keyword = _keywordEntityRepository.GetById(id);
+        keyword.IsPublished = toBePublished;
+        
+        _keywordEntityRepository.Update(keyword, "system");
+        _keywordEntityRepository.Save();
+
+        return _mapper.Map<Keyword>(keyword);
+    }
+
     public bool ExistsById(Guid id)
     {
         return _keywordEntityRepository.ExistsById(id);
+    }
+
+    public bool KeywordsVideoExistsById(Guid videoId)
+    {
+        return _keywordEntityRepository.KeywordsVideoExistsById(videoId);
     }
 }
